...
@Composable
fun LogoSection() {
  Column(horizontalAlignment = Alignment.CenterHorizontally) {
    Image(
        painter = painterResource(id = R.drawable.sign_in),
        contentDescription = "Checkmark",
        modifier = Modifier.size(230.dp).testTag("loginImage"))
    Spacer(modifier = Modifier.height(4.dp))
    Text(
        text = "Welcome!",
        style = Typography.bodyLarge.copy(fontSize = 28.sp),
        fontWeight = FontWeight.Bold,
        color = colorScheme.primary,
...
      onValueChange = onEmailChange,
      label = "Email",
      placeholder = "Enter your email",
      isValueOk = goodFormEmail,
      leadingIcon = Icons.Default.Email,
      leadingIconDescription = "Email Icon",
      testTag = "emailInput",
      errorMessage = "Your email must have \"@\" and \".\"",
      errorTestTag = "emailErrorMessage")

  Spacer(modifier = Modifier.height(10.dp))

  // Password input
  PasswordTextField(
      value = password,
      onValueChange = onPasswordChange,
      label = "Password",
      placeholder = "Enter your password",
      contentDescription = "Password",
      testTag = "passwordInput",
      passwordLengthComplete = passwordLengthComplete)

  Text(
      text = "Your password must have at least 6 characters",
      color = colorScheme.onSurfaceVariant,
      textAlign = TextAlign.Start,
...
                      } else {
                        Brush.horizontalGradient(
                            colors =
                                listOf(colorScheme.onSurfaceVariant, colorScheme.onSurfaceVariant))
                      },
                  shape = RoundedCornerShape(25.dp))
              .testTag("signInButton")) {
        Text(
            "Sign in",
            color = colorScheme.background,
            fontWeight = FontWeight.Bold,
            style = Typography.bodyLarge)
      }
...
