...
object Screen {

  const val PROFILE = "Profile Screen"
  const val EDIT_PROFILE = "EditProfile Screen"
}

data class TopLevelDestination(val route: String, val icon: ImageVector, val textId: String)

object TopLevelDestinations {

  val SERVICES =
      TopLevelDestination(route = Route.SERVICES, icon = Icons.Outlined.Home, textId = "Home")

...
