...
                  text = "Tap to Continue",
                  fontSize = 18.sp,
                  textDecoration = TextDecoration.Underline,
                  color = colorScheme.secondary,
                  modifier =
                      Modifier.clickable { navigationActions.navigateTo(Screen.SIGN_IN) }
                          .testTag("ctaButtonPortrait"))
            }
      }
}

/**
 * A composable function that displays the opening screen in landscape orientation.
...
