...
                    .verticalScroll(rememberScrollState()),
            horizontalAlignment = Alignment.CenterHorizontally,
            verticalArrangement = Arrangement.Top) {
              Image(
                  painter = painterResource(id = R.drawable.sign_up_image),
                  contentDescription = "Logo",
                  modifier = Modifier.size(250.dp).testTag("signUpIllustration"))

              ScreenTitle("Sign up", "signUpTitle")
              Spacer(modifier = Modifier.height(30.dp))

              GoogleButton(
                  onClick = {
                    authViewModel.setRole("seeker")
                    val gso =
...
                            .requestEmail()
                            .build()
                    val googleSignInClient = GoogleSignIn.getClient(context, gso)
                    launcher.launch(googleSignInClient.signInIntent)
                  },
                  text = "Sign up with Google",
                  testTag = "googleSignUpButton",
                  roundedCornerShape = RoundedCornerShape(12.dp))

              Spacer(modifier = Modifier.height(20.dp))
              Text("OR", color = colorScheme.onSurfaceVariant)

              Spacer(modifier = Modifier.height(10.dp))
...
                  onValueChange = { email = it },
                  label = "Email",
                  placeholder = "Enter your email",
                  isValueOk = goodFormEmail,
                  leadingIcon = Icons.Default.Email,
                  leadingIconDescription = "Email Icon",
                  testTag = "emailInputField",
                  errorMessage = "Your email must have \"@\" and \".\"",
                  errorTestTag = "emailErrorMessage")

              Spacer(modifier = Modifier.height(10.dp))

              PasswordTextField(
                  value = password,
                  onValueChange = { password = it },
                  label = "Password",
                  placeholder = "Enter your password",
                  contentDescription = "Password",
                  testTag = "passwordInputField",
                  passwordLengthComplete = passwordLengthComplete,
                  testTagErrorPassword = "passwordErrorMessage")

              Spacer(modifier = Modifier.height(10.dp))

              // Confirm Password Field
              PasswordTextField(
                  value = confirmPassword,
                  onValueChange = { confirmPassword = it },
                  label = "Confirm Password",
                  placeholder = "Re-enter your password",
                  contentDescription = "Confirm Password",
                  testTag = "confirmPasswordInputField",
                  passwordLengthComplete = (passwordLengthComplete && samePassword),
                  testTagErrorPassword = "confirmPasswordErrorMessage")

              if (!samePassword && confirmPassword.isNotEmpty() && password.isNotEmpty()) {
                Text(
                    text = "Password and Confirm Password must be the same",
                    color = colorScheme.error,
                    fontSize = 15.sp,
...
              Button(
                  onClick = generatePassword,
                  modifier =
                      Modifier.align(Alignment.End)
                          .padding(top = 16.dp)
                          .height(50.dp)
                          .testTag("generatePasswordButton"),
                  shape = RoundedCornerShape(25.dp),
                  colors =
                      ButtonDefaults.buttonColors(
                          containerColor = colorScheme.primary,
                          contentColor = colorScheme.background)) {
                    Text("Generate a password", style = Typography.bodyLarge)
...
                      } else {
                        Brush.horizontalGradient(
                            colors =
                                listOf(colorScheme.onSurfaceVariant, colorScheme.onSurfaceVariant))
                      },
                  shape = RoundedCornerShape(25.dp))
              .testTag("signUpButton"),
      shape = RoundedCornerShape(25.dp),
      colors = ButtonDefaults.buttonColors(containerColor = Color.Transparent)) {
        Text(
            "Sign Up",
            color = colorScheme.onPrimary,
            fontWeight = FontWeight.Bold,
...
          onClick = { offset ->
            annotatedText
                .getStringAnnotations(tag = "Log in", start = offset, end = offset)
                .firstOrNull()
                ?.let { navigationActions.navigateTo(Screen.SIGN_IN) }
          },
          modifier = Modifier.fillMaxWidth().testTag("logInLink"))
    }
  }
}

/**
 * A helper function that creates and returns a Retrofit instance for the Password API service.
...
